build/parser.output
Grammar

    0 $accept: Program $end

    1 Program: NizNaredbi

    2 NizNaredbi: NizNaredbi Naredba
    3           | Naredba

    4 Blok: '{' NizNaredbi '}'
    5     | Naredba

    6 Naredba: if_token '(' E ')' Blok
    7        | if_token '(' E ')' Blok else_token Blok
    8        | id_token '=' E ';'
    9        | print_token '(' string_token ')' ';'
   10        | for_token '(' Naredba E ';' E ')' Blok
   11        | while_token '(' E ')' Blok
   12        | E ';'

   13 E: E '+' E
   14  | E '*' E
   15  | E '/' E
   16  | E '-' E
   17  | E '%' E
   18  | E '<' E
   19  | E '>' E
   20  | E gte_token E
   21  | E lte_token E
   22  | E eq_token E
   23  | E neq_token E
   24  | '(' E ')'
   25  | num_token
   26  | id_token
   27  | '-' E
   28  | id_token incr_token
   29  | id_token decr_token
   30  | id_token '[' E ']'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 17
'(' (40) 6 7 9 10 11 24
')' (41) 6 7 9 10 11 24
'*' (42) 14
'+' (43) 13
'-' (45) 16 27
'/' (47) 15
';' (59) 8 9 10 12
'<' (60) 18
'=' (61) 8
'>' (62) 19
'[' (91) 30
']' (93) 30
'{' (123) 4
'}' (125) 4
error (256)
if_token (258) 6 7
else_token (259) 7
for_token (260) 10
print_token (261) 9
while_token (262) 11
incr_token (263) 28
decr_token (264) 29
eq_token (265) 22
neq_token (266) 23
num_token (267) 25
id_token (268) 8 26 28 29 30
string_token (269) 9
NO_ELSE (270)
lte_token (271) 21
gte_token (272) 20
UMINUS (273)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
NizNaredbi (36)
    on left: 2 3, on right: 1 2 4
Blok (37)
    on left: 4 5, on right: 6 7 10 11
Naredba (38)
    on left: 6 7 8 9 10 11 12, on right: 2 3 5 10
E (39)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30,
    on right: 6 7 8 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 27
    30


State 0

    0 $accept: . Program $end

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '('          shift, and go to state 8

    Program     go to state 9
    NizNaredbi  go to state 10
    Naredba     go to state 11
    E           go to state 12


State 1

    6 Naredba: if_token . '(' E ')' Blok
    7        | if_token . '(' E ')' Blok else_token Blok

    '('  shift, and go to state 13


State 2

   10 Naredba: for_token . '(' Naredba E ';' E ')' Blok

    '('  shift, and go to state 14


State 3

    9 Naredba: print_token . '(' string_token ')' ';'

    '('  shift, and go to state 15


State 4

   11 Naredba: while_token . '(' E ')' Blok

    '('  shift, and go to state 16


State 5

   25 E: num_token .

    $default  reduce using rule 25 (E)


State 6

    8 Naredba: id_token . '=' E ';'
   26 E: id_token .
   28  | id_token . incr_token
   29  | id_token . decr_token
   30  | id_token . '[' E ']'

    incr_token  shift, and go to state 17
    decr_token  shift, and go to state 18
    '='         shift, and go to state 19
    '['         shift, and go to state 20

    $default  reduce using rule 26 (E)


State 7

   27 E: '-' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 22


State 8

   24 E: '(' . E ')'

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 23


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 24


State 10

    1 Program: NizNaredbi .
    2 NizNaredbi: NizNaredbi . Naredba

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '('          shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Naredba  go to state 25
    E        go to state 12


State 11

    3 NizNaredbi: Naredba .

    $default  reduce using rule 3 (NizNaredbi)


State 12

   12 Naredba: E . ';'
   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ';'        shift, and go to state 37


State 13

    6 Naredba: if_token '(' . E ')' Blok
    7        | if_token '(' . E ')' Blok else_token Blok

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 38


State 14

   10 Naredba: for_token '(' . Naredba E ';' E ')' Blok

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '('          shift, and go to state 8

    Naredba  go to state 39
    E        go to state 12


State 15

    9 Naredba: print_token '(' . string_token ')' ';'

    string_token  shift, and go to state 40


State 16

   11 Naredba: while_token '(' . E ')' Blok

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 41


State 17

   28 E: id_token incr_token .

    $default  reduce using rule 28 (E)


State 18

   29 E: id_token decr_token .

    $default  reduce using rule 29 (E)


State 19

    8 Naredba: id_token '=' . E ';'

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 42


State 20

   30 E: id_token '[' . E ']'

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 43


State 21

   26 E: id_token .
   28  | id_token . incr_token
   29  | id_token . decr_token
   30  | id_token . '[' E ']'

    incr_token  shift, and go to state 17
    decr_token  shift, and go to state 18
    '['         shift, and go to state 20

    $default  reduce using rule 26 (E)


State 22

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E
   27  | '-' E .

    $default  reduce using rule 27 (E)


State 23

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E
   24  | '(' E . ')'

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ')'        shift, and go to state 44


State 24

    0 $accept: Program $end .

    $default  accept


State 25

    2 NizNaredbi: NizNaredbi Naredba .

    $default  reduce using rule 2 (NizNaredbi)


State 26

   22 E: E eq_token . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 45


State 27

   23 E: E neq_token . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 46


State 28

   18 E: E '<' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 47


State 29

   19 E: E '>' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 48


State 30

   21 E: E lte_token . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 49


State 31

   20 E: E gte_token . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 50


State 32

   13 E: E '+' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 51


State 33

   16 E: E '-' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 52


State 34

   14 E: E '*' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 53


State 35

   15 E: E '/' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 54


State 36

   17 E: E '%' . E

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 55


State 37

   12 Naredba: E ';' .

    $default  reduce using rule 12 (Naredba)


State 38

    6 Naredba: if_token '(' E . ')' Blok
    7        | if_token '(' E . ')' Blok else_token Blok
   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ')'        shift, and go to state 56


State 39

   10 Naredba: for_token '(' Naredba . E ';' E ')' Blok

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 57


State 40

    9 Naredba: print_token '(' string_token . ')' ';'

    ')'  shift, and go to state 58


State 41

   11 Naredba: while_token '(' E . ')' Blok
   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ')'        shift, and go to state 59


State 42

    8 Naredba: id_token '=' E . ';'
   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ';'        shift, and go to state 60


State 43

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E
   30  | id_token '[' E . ']'

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ']'        shift, and go to state 61


State 44

   24 E: '(' E ')' .

    $default  reduce using rule 24 (E)


State 45

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   22  | E eq_token E .
   23  | E . neq_token E

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 22 (E)


State 46

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E
   23  | E neq_token E .

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 23 (E)


State 47

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   18  | E '<' E .
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 18 (E)


State 48

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   19  | E '>' E .
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 19 (E)


State 49

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   21  | E lte_token E .
   22  | E . eq_token E
   23  | E . neq_token E

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 21 (E)


State 50

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   20  | E gte_token E .
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 20 (E)


State 51

   13 E: E . '+' E
   13  | E '+' E .
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 13 (E)


State 52

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   16  | E '-' E .
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 16 (E)


State 53

   13 E: E . '+' E
   14  | E . '*' E
   14  | E '*' E .
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    $default  reduce using rule 14 (E)


State 54

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   15  | E '/' E .
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    $default  reduce using rule 15 (E)


State 55

   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   17  | E '%' E .
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    $default  reduce using rule 17 (E)


State 56

    6 Naredba: if_token '(' E ')' . Blok
    7        | if_token '(' E ')' . Blok else_token Blok

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '{'          shift, and go to state 62
    '('          shift, and go to state 8

    Blok     go to state 63
    Naredba  go to state 64
    E        go to state 12


State 57

   10 Naredba: for_token '(' Naredba E . ';' E ')' Blok
   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ';'        shift, and go to state 65


State 58

    9 Naredba: print_token '(' string_token ')' . ';'

    ';'  shift, and go to state 66


State 59

   11 Naredba: while_token '(' E ')' . Blok

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '{'          shift, and go to state 62
    '('          shift, and go to state 8

    Blok     go to state 67
    Naredba  go to state 64
    E        go to state 12


State 60

    8 Naredba: id_token '=' E ';' .

    $default  reduce using rule 8 (Naredba)


State 61

   30 E: id_token '[' E ']' .

    $default  reduce using rule 30 (E)


State 62

    4 Blok: '{' . NizNaredbi '}'

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '('          shift, and go to state 8

    NizNaredbi  go to state 68
    Naredba     go to state 11
    E           go to state 12


State 63

    6 Naredba: if_token '(' E ')' Blok .
    7        | if_token '(' E ')' Blok . else_token Blok

    else_token  shift, and go to state 69

    $default  reduce using rule 6 (Naredba)


State 64

    5 Blok: Naredba .

    $default  reduce using rule 5 (Blok)


State 65

   10 Naredba: for_token '(' Naredba E ';' . E ')' Blok

    num_token  shift, and go to state 5
    id_token   shift, and go to state 21
    '-'        shift, and go to state 7
    '('        shift, and go to state 8

    E  go to state 70


State 66

    9 Naredba: print_token '(' string_token ')' ';' .

    $default  reduce using rule 9 (Naredba)


State 67

   11 Naredba: while_token '(' E ')' Blok .

    $default  reduce using rule 11 (Naredba)


State 68

    2 NizNaredbi: NizNaredbi . Naredba
    4 Blok: '{' NizNaredbi . '}'

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '}'          shift, and go to state 71
    '('          shift, and go to state 8

    Naredba  go to state 25
    E        go to state 12


State 69

    7 Naredba: if_token '(' E ')' Blok else_token . Blok

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '{'          shift, and go to state 62
    '('          shift, and go to state 8

    Blok     go to state 72
    Naredba  go to state 64
    E        go to state 12


State 70

   10 Naredba: for_token '(' Naredba E ';' E . ')' Blok
   13 E: E . '+' E
   14  | E . '*' E
   15  | E . '/' E
   16  | E . '-' E
   17  | E . '%' E
   18  | E . '<' E
   19  | E . '>' E
   20  | E . gte_token E
   21  | E . lte_token E
   22  | E . eq_token E
   23  | E . neq_token E

    eq_token   shift, and go to state 26
    neq_token  shift, and go to state 27
    '<'        shift, and go to state 28
    '>'        shift, and go to state 29
    lte_token  shift, and go to state 30
    gte_token  shift, and go to state 31
    '+'        shift, and go to state 32
    '-'        shift, and go to state 33
    '*'        shift, and go to state 34
    '/'        shift, and go to state 35
    '%'        shift, and go to state 36
    ')'        shift, and go to state 73


State 71

    4 Blok: '{' NizNaredbi '}' .

    $default  reduce using rule 4 (Blok)


State 72

    7 Naredba: if_token '(' E ')' Blok else_token Blok .

    $default  reduce using rule 7 (Naredba)


State 73

   10 Naredba: for_token '(' Naredba E ';' E ')' . Blok

    if_token     shift, and go to state 1
    for_token    shift, and go to state 2
    print_token  shift, and go to state 3
    while_token  shift, and go to state 4
    num_token    shift, and go to state 5
    id_token     shift, and go to state 6
    '-'          shift, and go to state 7
    '{'          shift, and go to state 62
    '('          shift, and go to state 8

    Blok     go to state 74
    Naredba  go to state 64
    E        go to state 12


State 74

   10 Naredba: for_token '(' Naredba E ';' E ')' Blok .

    $default  reduce using rule 10 (Naredba)
